--- a/front/package.json
+++ b/front/package.json
@@ -9,18 +9,23 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "^7.2.0",
-    "core-js": "^3.19.3",
-    "nuxt": "^2.13.3",
-    "vue": "^2.6.14",
-    "vue-select": "^3.18.3",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "@nuxtjs/i18n": "^7.3.0",
+    "core-js": "^3.25.0",
+    "nuxt": "^2.15.8",
+    "vue": "^2.7.10",
+    "vue-select": "^3.20.0",
+    "vue-server-renderer": "^2.7.10",
+    "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^4.2.1",
-    "postcss": "^8.4.4"
+    "postcss": "^8.4.16"
+  },
+  "overrides": {
+    "parse-path": "^5.0.0",
+    "glob-parent": "5.1.2",
+    "nth-check": "2.0.1"
   }
 }
