--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.0",
+    "consola": "^2.15.3",
     "core-js": "^3.25.0",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-select": "^3.20.0",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "webpack": "4.27.0"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
